--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -595,3 +595,12 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.img-fluid {
+  width: 100%;
+  height: auto;
+}
+
+.kss-header {
+  background-color: black;
+}
